--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -166,3 +166,6 @@
 - import_playbook: ocp-odf-operator.yml
   when: odf_enabled is defined and odf_enabled
 
+- import_playbook: ocp-kmm.yml
+  when: kmm_enabled is defined and kmm_enabled
+
