Added role for building oc-dummy-device-plugin image

--- a/playbooks/roles/device-plugin-image-build/tasks/main.yaml
+++ b/playbooks/roles/device-plugin-image-build/tasks/main.yaml
@@ -20,6 +20,8 @@
     repo: "{{ device_plugin_repo }}"
     dest: "{{ device_plugin_workdir }}"
     version: main
+    force: yes
+    update: no
 
 # Download go-toolset Containerfile
 - name: Download Containerfile-go-toolset
