Added role for building oc-dummy-device-plugin image

--- a/playbooks/roles/device-plugin-image-build/tasks/main.yaml
+++ b/playbooks/roles/device-plugin-image-build/tasks/main.yaml
@@ -19,7 +19,7 @@
   git:
     repo: "{{ device_plugin_repo }}"
     dest: "{{ device_plugin_workdir }}"
-    version: main
+    version: master
     force: yes
     update: no
 
