--- a/playbooks/roles/device-plugin-image-build/tasks/main.yaml
+++ b/playbooks/roles/device-plugin-image-build/tasks/main.yaml
@@ -44,7 +44,7 @@
   replace:
     path: "{{ device_plugin_workdir }}/Dockerfile"
     regex: '^FROM\s+.*\s+AS\s+builder'
-    replace: 'FROM {{ go_toolset_image }}'
+    replace: 'FROM {{ go_toolset_image }} AS builder'
 
 - name: Verified updated builder image in Dockerfile
   shell: grep -E '^FROM .* AS builder' Dockerfile
