Added role for to install local crane registry
Signed-off-by: Rajakumar Battula <rbattula@redhat.com>

--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -172,6 +172,9 @@
 - import_playbook: eco-gotests.yml
   when: eco_gotests_validation is defined and eco_gotests_validation
 
+- import_playbook: crane-registry.yaml
+  when: install_crane_registry is defined and install_crane_registry
+
 - import_playbook: device-plugin-image-build.yaml
   when: device-plugin-image-build is defined and device-plugin-image-build
 
