Added role to install crane registry
Signed-off-by: Rajakumar Battula <rbattula@redhat.com>

--- a/playbooks/roles/crane-registry/tasks/main.yaml
+++ b/playbooks/roles/crane-registry/tasks/main.yaml
@@ -19,7 +19,7 @@
 
 - name: Extract crane tarball
   unarchive:
-    src: "/src/{{ crane_tarball }}"
+    src: "/tmp/{{ crane_tarball }}"
     dest: /tmp
     remote_src: yes
   when: install_crane_registry
