--- a/playbooks/roles/eco-gotests/defaults/main.yaml
+++ b/playbooks/roles/eco-gotests/defaults/main.yaml
@@ -6,7 +6,7 @@ eco_gotests_directory: "/tmp/eco-gotests"
 golang_tarball_url: "https://go.dev/dl/go1.24.1.linux-ppc64le.tar.gz"
 golang_installation_path: "/usr/local/"
 testcase_filters : 'Image_Registry\\|API_Server'
-crane_registry_addr: "10.20.183.20:40000"
+crane_registry_addr: "{{ ansible_default_ipv4.address }}:40000"
 pdp_registry_namespace: "ubi9" 
 pdp_image_name: "power-dev-plugin"
 pdp_image_tag: "latest-s%"
