Updated role to run eco-gotests tests
Signed-off-by: Rajakumar Battula <rbattula@redhat.com>

--- a/playbooks/roles/eco-gotests/tasks/main.yaml
+++ b/playbooks/roles/eco-gotests/tasks/main.yaml
@@ -111,7 +111,7 @@
 
     - name: Wait for KMM operator to be available
       shell: |
-        oc wait deployment/kmm-operator -n openshift-kmm --for=condition=Available --timeout=300s
+        oc wait deployment/kmm-operator-controller -n openshift-kmm --for=condition=Available --timeout=300s
       args:
         executable: /bin/bash
 
